--- a/src/app/view/transport-calls-table/transport-calls-table.component.html
+++ b/src/app/view/transport-calls-table/transport-calls-table.component.html
@@ -6,14 +6,14 @@
   (onRowUnselect)="unselectTransportCall()">
   <ng-template pTemplate="caption">
     <div class="grid">
-      <div class="col">{{'general.portCall.label' | translate}}</div>
+      <div class="col">{{'general.portVisit.label' | translate}}</div>
       <div class="col tableHeader">
 
       </div>
       <div class="col tableHeader">
         <div class="tableHeader__buttons">
           <p-button (onClick)="openCreationDialog()" class="p-button-raised p-button-rounded tableHeader__add_button"
-            icon="pi pi-plus" pTooltip="{{ 'general.portCall.table.create.label' | translate }}"
+            icon="pi pi-plus" pTooltip="{{ 'general.portVisit.table.create.label' | translate }}"
             tooltipPosition="left" type="button" tooltipStyleClass="ToolTipClass"></p-button>
         </div>
         <div class="tableHeader__buttons">
