DDT-1168: add milesToDestinationPort option & more
- Enforce validators on milesToDestinationPort
- enforce validators on vessel position
- add lang & syntax

--- a/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -10,8 +10,8 @@
       </div>
       <div class="p-field col-12 md:col-4">
         <label class="label-compressed" for="portOfCall">{{'general.port.ofCall'| translate}}: </label>
-        <span id="portOfCall"
-              *ngIf="defaultTimestamp.portOfCall != null">  {{$any(defaultTimestamp.portOfCall).UNLocationCode}} </span>
+        <span id="portOfCall" *ngIf="defaultTimestamp.portOfCall != null">
+          {{$any(defaultTimestamp.portOfCall).UNLocationCode}} </span>
         <!-- {{defaultTimestamp.portOfCall.unLocode}} </span> -->
       </div>
       <div class="p-field col-12 md:col-4">
@@ -22,43 +22,32 @@
           : </label>
         <span id="vesselIMO"> {{transportCall.vesselIMONumber}}</span>
       </div>
-      <!--
-      <div class="p-field col-12 md:col-4">
-        <label class="label-compressed" for="terminal">{{'general.terminal.label'| translate}}: </label>
-        <span>{{defaultTimestamp.eventLocation?.facilityCode}}</span>
-      <span *ngIf="defaultTimestamp.eventLocation?.facilityCode == null">
-        <span *ngIf="defaultTimestamp.facilitySMDGCode != null">
-          {{defaultTimestamp.facilitySMDGCode}}
-        </span>
-        <span *ngIf="defaultTimestamp.facilitySMDGCode == null">
-        N/A
-        </span>
-      </span>
-      </div>
-    -->
 
       <div class="p-field col-12 md:col-4" *ngIf="respondingToTimestamp != null">
         <!-- Placeholder for additional information when rejecting timestamp -->
-        <label class="label-compressed" for="eventtimestamp">{{'general.table.header.eventTimestamp.declinedLabel' | translate }}: </label>
-        <span style="font-weight: bold;" >{{ " " +(respondingToTimestamp.eventDateTime | timestampToTimezone: respondingToTimestamp.portOfCall)[0]}}</span>
+        <label class="label-compressed" for="eventtimestamp">{{'general.table.header.eventTimestamp.declinedLabel' |
+          translate }}: </label>
+        <span style="font-weight: bold;">{{ " " +(respondingToTimestamp.eventDateTime | timestampToTimezone:
+          respondingToTimestamp.portOfCall)[0]}}</span>
       </div>
     </div>
   </p-card>
 </div>
 
-<div class="p-fluid p-formgrid grid">
+<div [formGroup]="timestampFormGroup" class="p-fluid p-formgrid grid">
 
   <div class="p-field col-12 md:col-4">
     <label for="timestampType">{{ 'general.table.header.timestamp.label' | translate }}: </label>
     <p-dropdown id="timestampType" styleClass="dropdown" [(ngModel)]="timestampTypeSelected" [options]="timestampTypes"
-                [filter]=true filterBy="label" appendTo="body" (onChange)="showLocationNameOption()"></p-dropdown>
+      [filter]=true filterBy="label" appendTo="body" (onChange)="showLocationNameOption()"
+      [ngModelOptions]="{standalone: true}"></p-dropdown>
 
-    <div class="p-field col-12 md:col-2" ></div>
+    <div class="p-field col-12 md:col-2"></div>
 
     <div [hidden]="!showTerminalOption()">
       <label for="terminalSelected">{{ 'general.terminal.label' | translate }}: </label>
       <p-dropdown id="terminalSelected" styleClass="dropdown" [(ngModel)]="terminalSelected" [options]="terminalOptions"
-                  [filter]=true filterBy="label,value.facilityName" appendTo="body">
+        [filter]=true filterBy="label,value.facilityName" appendTo="body" [ngModelOptions]="{standalone: true}">
         <ng-template let-terminal pTemplate="item">
           <div *ngIf="!terminal.value">
             <div>Select Terminal</div>
@@ -70,32 +59,9 @@
         </ng-template>
       </p-dropdown>
     </div>
-    </div>
+  </div>
 
   <div class="p-field col-12 md:col-2"></div>
-
-  <!--
-  <div class="p-field col-12 md:col-5">
-    <label for="logoftimestamp">{{ 'general.table.header.logOfTimestamp.label' | translate }}: </label>
-    <div class="p-fluid p-formgrid grid">
-      <div class="p-field col-12 md:col-6">
-        <p-calendar id="logoftimestamp" appendTo="body" [(ngModel)]="logOfTimestampDate" hourFormat="24"
-                    [monthNavigator]="true" [showButtonBar]="false"
-                    [showIcon]="true" [showWeek]="true"
-                    [yearNavigator]="true" yearRange="2010:2040"
-                    styleClass="date-time-date-field" placeholder="{{ 'general.timestamp.date.log' | translate }}"
-                    [panelStyleClass]="'datetime-panel'"></p-calendar>
-      </div>
-      <div class="p-field col-12 md:col-6">
-        <p-inputMask [(ngModel)]="logOfTimestampTime" mask="99:99"
-                     placeholder="{{ 'general.timestamp.time' | translate }}"
-                     styleClass="datetime-time-time-field"></p-inputMask>
-        <button type="button" pButton pRipple icon="pi pi-clock" styleClass="p-button-success"
-                (click)="setLogOfTimestampToNow()"></button>
-      </div>
-    </div>
-  </div>
- -->
 
 
   <div class="p-field col-12 md:col-5">
@@ -104,43 +70,31 @@
     <div class="p-fluid p-formgrid grid">
       <div class="p-field col-12 md:col-6">
         <p-calendar id="eventtimestamp" appendTo="body" [(ngModel)]="eventTimestampDate" hourFormat="24"
-                    [monthNavigator]="true" [showButtonBar]="false"
-                    [showIcon]="true" [showWeek]="true"
-                    [yearNavigator]="true" yearRange="2010:2030"
-                    styleClass="date-time-date-field" placeholder="{{ 'general.timestamp.date.event' | translate }}"
-                    [panelStyleClass]="'datetime-panel'"></p-calendar>
+          [monthNavigator]="true" [showButtonBar]="false" [showIcon]="true" [showWeek]="true" [yearNavigator]="true"
+          yearRange="2010:2030" styleClass="date-time-date-field"
+          placeholder="{{ 'general.timestamp.date.event' | translate }}" [panelStyleClass]="'datetime-panel'"
+          [ngModelOptions]="{standalone: true}"></p-calendar>
       </div>
       <div class="p-field col-12 md:col-6">
         <p-inputMask [(ngModel)]="eventTimestampTime" mask="99:99"
-                     placeholder="{{ 'general.timestamp.time' | translate }}"
-                     styleClass="datetime-time-time-field"></p-inputMask>
-        <button pTooltip="{{ 'general.currentTime.tooltip' | translate }}"
-                tooltipPosition="top"
-                tooltipStyleClass="ToolTipClass"
-                class="minus-rounded-borders" type="button" pButton pRipple icon="pi pi-clock"
-                styleClass="p-button-success"
-                (click)="setEventTimestampToNow()"></button>
+          placeholder="{{ 'general.timestamp.time' | translate }}" styleClass="datetime-time-time-field"
+          [ngModelOptions]="{standalone: true}"></p-inputMask>
+        <button pTooltip="{{ 'general.currentTime.tooltip' | translate }}" tooltipPosition="top"
+          tooltipStyleClass="ToolTipClass" class="minus-rounded-borders" type="button" pButton pRipple
+          icon="pi pi-clock" styleClass="p-button-success" (click)="setEventTimestampToNow()"></button>
       </div>
     </div>
   </div>
-  <!--
-  <div class="p-field col-12 md:col-2">
-  </div>
 
-  <div class="p-field col-12 md:col-5">
-    <label for="locationID">{{'general.table.header.berthId.label' | translate }}</label>
-    <input id="locationID" [(ngModel)]="defaultTimestamp.locationId" pInputText style="width: 100%" type="text"/>
-  </div>
-  <div class="p-field col-12 md:col-7">
-  </div> -->
   <div class="p-field col-12 md:col-4">
     <div class="p-field berth-location-field" [hidden]="!showLocationNameOption()">
       <label for="locationName">{{ locationNameLabel | translate }}:</label>
-      <input id="locationName" [(ngModel)]="locationName" pInputText style="width: 100%" type="text"/>
+      <input id="locationName" [(ngModel)]="locationName" pInputText style="width: 100%" type="text"
+        [ngModelOptions]="{standalone: true}" />
     </div>
     <label for="delayCode">{{"general.delaycode.label" | translate}}</label>
     <p-dropdown appendTo="body" id="delayCode" [options]="delayCodeOptions" [(ngModel)]="delayCode" [filter]="true"
-                filterBy="label,value.name" [group]="false">
+      filterBy="label,value.name" [group]="false" [ngModelOptions]="{standalone: true}">
       <ng-template let-delayCode pTemplate="selectedItem">
         <div *ngIf="delayCode.value" class="delayCodeSelectedWrapper">
           <div class="delayCodeSelected__smdgCode">{{delayCode.value.smdgCode}}</div>
@@ -168,7 +122,8 @@
 
   <div class="p-field col-12 md:col-5">
     <span class="p-float-label">
-      <textarea class="commentBox" id="commentbox" pInputTextarea [(ngModel)]="defaultTimestamp.remark"></textarea>
+      <textarea class="commentBox" id="commentbox" pInputTextarea [(ngModel)]="defaultTimestamp.remark"
+        [ngModelOptions]="{standalone: true}"></textarea>
       <label for="commentbox">{{ 'general.comment.tooltip' | translate }}</label>
     </span>
   </div>
@@ -176,16 +131,36 @@
   <!-- Vessel Position -->
   <div class="p-field col-12 md:col-4" [hidden]="!showVesselPosition()">
     <label for="vesselPositionLatitude">{{ "general.timestamp.vesselPosition.latitude.label" | translate }}:</label>
-    <input id="vesselPositionLatitude" [(ngModel)]="vesselPosition.latitude" pInputText style="width: 100%" type="text"/>
+    <input id="vesselPositionLatitude" formControlName="vesselPositionLatitude" pInputText style="width: 100%"
+      type="text" />
+    <span *ngIf="timestampFormGroup.get('vesselPositionLatitude').hasError('maxlength')" class="p-invalid">
+      {{ 'general.timestamp.vesselPosition.latitude.maxLength' | translate }}
+    </span>
+    <span *ngIf="timestampFormGroup.get('vesselPositionLatitude').hasError('pattern')" class="p-invalid">
+      {{ 'general.timestamp.vesselPosition.latitude.pattern' | translate }}
+    </span>
   </div>
   <div class="p-field col-12 md:col-4" [hidden]="!showVesselPosition()">
     <label for="vesselPositionLongitude">{{ "general.timestamp.vesselPosition.longitude.label" | translate }}:</label>
-    <input id="vesselPositionLongitude" [(ngModel)]="vesselPosition.longitude" pInputText style="width: 100%" type="text"/>
+    <input id="vesselPositionLongitude" formControlName="vesselPositionLongitude" pInputText style="width: 100%"
+      type="text" />
+    <span *ngIf="timestampFormGroup.get('vesselPositionLongitude').hasError('maxlength')" class="p-invalid">
+      {{ 'general.timestamp.vesselPosition.longitude.maxLength' | translate }}
+    </span>
+    <span *ngIf="timestampFormGroup.get('vesselPositionLongitude').hasError('pattern')" class="p-invalid">
+      {{ 'general.timestamp.vesselPosition.longitude.pattern' | translate }}
+    </span>
   </div>
-  <div class="p-field col-12 md:col-2"></div>
 
-  <!-- Location Name -->
-
+  <!-- Miles remaning -->
+  <div class="p-field col-12 md:col-4" [hidden]="!showmilesToDestinationPortOption()">
+    <label for="milesToDestinationPort">{{ "general.timestamp.milesToDestinationPort.label" | translate }}:</label>
+    <input id="milesToDestinationPort" formControlName="milesToDestinationPort" pInputText style="width: 100%"
+      type="text" />
+    <span *ngIf="timestampFormGroup.get('milesToDestinationPort').hasError('pattern')" class="p-invalid">
+      {{ 'general.timestamp.milesToDestinationPort.pattern' | translate }}
+    </span>
+  </div>
   <div class="p-field col-12 md:col-6"></div>
 </div>
 
@@ -193,21 +168,15 @@
   <div class="col-8">
   </div>
   <div class="col-4 footer_option" style="justify-content: flex-end">
-    <p-button (onClick)="close()" class="footer_option__buttons"
-              icon="pi pi-times-circle" label="{{'general.close.label' | translate}}" iconPos="left">
+    <p-button (onClick)="close()" class="footer_option__buttons" icon="pi pi-times-circle"
+      label="{{'general.close.label' | translate}}" iconPos="left">
     </p-button>
     <p-button (onClick)="savePortcallTimestamp(defaultTimestamp)" class="footer_option__buttons"
-              [disabled]="validatePortOfCallTimestamp()" icon="pi pi-save"
-              label="{{'general.save.editor.label' | translate}}" iconPos="left">
-      <p-progressSpinner *ngIf="creationProgress" [style]="{width: '18px', height: '18px'}"
-                         styleClass="custom-spinner"
-                         strokeWidth="3"
-                         animationDuration=".9s"></p-progressSpinner>
+      [disabled]="validatePortOfCallTimestamp()" icon="pi pi-save" label="{{'general.save.editor.label' | translate}}"
+      iconPos="left">
+      <p-progressSpinner *ngIf="creationProgress" [style]="{width: '18px', height: '18px'}" styleClass="custom-spinner"
+        strokeWidth="3" animationDuration=".9s"></p-progressSpinner>
     </p-button>
 
   </div>
 </div>
-
-
-
-
