--- a/src/app/view/timestamp-accept-editor/timestamp-accept-editor.component.html
+++ b/src/app/view/timestamp-accept-editor/timestamp-accept-editor.component.html
@@ -23,8 +23,8 @@
       <div class="p-field col-12 md:col-4" *ngIf="responseTimestamp != null">
         <!-- Placeholder for additional information when rejecting timestamp -->
         <div *ngIf="timestampResponseStatus == 'Accepted'">
-        <label class="label-compressed" for="eventtimestamp">{{'general.table.header.eventTimestamp.acceptedLabel' |
-          translate }}: </label>
+          <label class="label-compressed" for="eventtimestamp">{{'general.table.header.eventTimestamp.acceptedLabel' |
+            translate }}: </label>
           <span style="font-weight: bold;">{{ " " +(responseTimestamp.eventDateTime | timestampToTimezone:
             responseTimestamp.portOfCall)[0]}}</span>
         </div>
@@ -47,32 +47,25 @@
   </p-card>
 </div>
 
-<div class="p-fluid p-formgrid grid">
+<div class="p-fluid p-formgrid grid" [formGroup]="timestampFormGroup">
 
+  <div class="p-field col-12 md:col-5" *ngIf="responseTimestamp != null && timestampResponseStatus == 'Rejected'">
+    <label for="eventtimestamp">{{ 'general.table.header.eventTimestamp.label' | translate }}: </label>
 
-
-    <div class="p-field col-12 md:col-5" *ngIf="responseTimestamp != null && timestampResponseStatus == 'Rejected'">
-      <label for="eventtimestamp">{{ 'general.table.header.eventTimestamp.label' | translate }}: </label>
-
-    <div class="p-fluid p-formgrid grid" >
+    <div class="p-fluid p-formgrid grid">
       <div class="p-field col-12 md:col-6">
-        <p-calendar id="eventtimestamp" appendTo="body" [(ngModel)]="eventTimestampDate" hourFormat="24"
-                    [monthNavigator]="true" [showButtonBar]="false"
-                    [showIcon]="true" [showWeek]="true"
-                    [yearNavigator]="true" yearRange="2010:2030"
-                    styleClass="date-time-date-field" placeholder="{{ 'general.timestamp.date.event' | translate }}"
-                    [panelStyleClass]="'datetime-panel'"></p-calendar>
+        <p-calendar id="eventtimestamp" appendTo="body" [(ngModel)]="eventTimestampDate"
+          [ngModelOptions]="{standalone: true}" hourFormat="24" [monthNavigator]="true" [showButtonBar]="false"
+          [showIcon]="true" [showWeek]="true" [yearNavigator]="true" yearRange="2010:2030"
+          styleClass="date-time-date-field" placeholder="{{ 'general.timestamp.date.event' | translate }}"
+          [panelStyleClass]="'datetime-panel'"></p-calendar>
       </div>
       <div class="p-field col-12 md:col-6">
-        <p-inputMask [(ngModel)]="eventTimestampTime" mask="99:99"
-                      placeholder="{{ 'general.timestamp.time' | translate }}"
-                      styleClass="datetime-time-time-field"></p-inputMask>
-        <button pTooltip="{{ 'general.currentTime.tooltip' | translate }}"
-                tooltipPosition="top"
-                tooltipStyleClass="ToolTipClass"
-                class="minus-rounded-borders" type="button" pButton pRipple icon="pi pi-clock"
-                styleClass="p-button-success"
-                (click)="setEventTimestampToNow()"></button>
+        <p-inputMask [(ngModel)]="eventTimestampTime" [ngModelOptions]="{standalone: true}" mask="99:99"
+          placeholder="{{ 'general.timestamp.time' | translate }}" styleClass="datetime-time-time-field"></p-inputMask>
+        <button pTooltip="{{ 'general.currentTime.tooltip' | translate }}" tooltipPosition="top"
+          tooltipStyleClass="ToolTipClass" class="minus-rounded-borders" type="button" pButton pRipple
+          icon="pi pi-clock" styleClass="p-button-success" (click)="setEventTimestampToNow()"></button>
       </div>
     </div>
   </div>
@@ -80,8 +73,9 @@
   <div class="p-field col-12 md:col-4">
     <div [hidden]="!showTerminalOption()">
       <label for="terminalSelected">{{ 'general.terminal.label' | translate }}: </label>
-      <p-dropdown id="terminalSelected" styleClass="dropdown" [(ngModel)]="terminalSelected" [options]="terminalOptions"
-        [filter]=true filterBy="label,value.facilityName" appendTo="body">
+      <p-dropdown id="terminalSelected" styleClass="dropdown" [(ngModel)]="terminalSelected"
+        [ngModelOptions]="{standalone: true}" [options]="terminalOptions" [filter]=true
+        filterBy="label,value.facilityName" appendTo="body">
         <ng-template let-terminal pTemplate="item">
           <div *ngIf="!terminal.value">
             <div>Select Terminal</div>
@@ -95,7 +89,17 @@
     </div>
     <div class="p-field berth-location-field" [hidden]="!showLocationNameOption()">
       <label for="locationName">{{ locationNameLabel | translate }}:</label>
-      <input id="locationName" [(ngModel)]="locationName" pInputText style="width: 100%" type="text" />
+      <input id="locationName" [(ngModel)]="locationName" [ngModelOptions]="{standalone: true}" pInputText
+        style="width: 100%" type="text" />
+    </div>
+    <!-- Miles remaning -->
+    <div class="p-field berth-location-field" [hidden]="!showmilesToDestinationPortOption()">
+      <label for="milesToDestinationPort">{{ "general.timestamp.milesToDestinationPort.label" | translate }}:</label>
+      <input id="milesToDestinationPort" formControlName="milesToDestinationPort" pInputText style="width: 100%"
+        type="text" />
+      <span *ngIf="timestampFormGroup.get('milesToDestinationPort').hasError('pattern')" class="p-invalid">
+        {{ 'general.timestamp.milesToDestinationPort.pattern' | translate }}
+      </span>
     </div>
   </div>
 
@@ -104,8 +108,8 @@
   <div class="p-field col-12 md:col-4">
 
     <label for="delayCode">{{"general.delaycode.label" | translate}}</label>
-    <p-dropdown appendTo="body" id="delayCode" [options]="delayCodeOptions" [(ngModel)]="delayCode" [filter]="true"
-      filterBy="label,value.name" [group]="false">
+    <p-dropdown appendTo="body" id="delayCode" [options]="delayCodeOptions" [(ngModel)]="delayCode"
+      [ngModelOptions]="{standalone: true}" [filter]="true" filterBy="label,value.name" [group]="false">
       <ng-template let-delayCode pTemplate="selectedItem">
         <div *ngIf="delayCode.value" class="delayCodeSelectedWrapper">
           <div class="delayCodeSelected__smdgCode">{{delayCode.value.smdgCode}}</div>
@@ -134,7 +138,8 @@
   <div class="p-field col-12 md:col-2"></div>
   <div class="p-field col-12 md:col-5">
     <span class="p-float-label">
-      <textarea class="commentBox" id="commentbox" pInputTextarea [(ngModel)]="responseTimestamp.remark"></textarea>
+      <textarea class="commentBox" id="commentbox" pInputTextarea [(ngModel)]="responseTimestamp.remark"
+        [ngModelOptions]="{standalone: true}"></textarea>
       <label for="commentbox">{{ 'general.comment.tooltip' | translate }}</label>
     </span>
   </div>
@@ -146,13 +151,25 @@
   <!-- Vessel Position -->
   <div class="p-field col-12 md:col-4" [hidden]="!showVesselPosition()">
     <label for="vesselPositionLatitude">{{ "general.timestamp.vesselPosition.latitude.label" | translate }}:</label>
-    <input id="vesselPositionLatitude" [(ngModel)]="vesselPosition.latitude" pInputText style="width: 100%"
+    <input id="vesselPositionLatitude" formControlName="vesselPositionLatitude" pInputText style="width: 100%"
       type="text" />
+    <span *ngIf="timestampFormGroup.get('vesselPositionLatitude').hasError('maxlength')" class="p-invalid">
+      {{ 'general.timestamp.vesselPosition.latitude.maxLength' | translate }}
+    </span>
+    <span *ngIf="timestampFormGroup.get('vesselPositionLatitude').hasError('pattern')" class="p-invalid">
+      {{ 'general.timestamp.vesselPosition.latitude.pattern' | translate }}
+    </span>
   </div>
   <div class="p-field col-12 md:col-4" [hidden]="!showVesselPosition()">
     <label for="vesselPositionLongitude">{{ "general.timestamp.vesselPosition.longitude.label" | translate }}:</label>
-    <input id="vesselPositionLongitude" [(ngModel)]="vesselPosition.longitude" pInputText style="width: 100%"
+    <input id="vesselPositionLongitude" formControlName="vesselPositionLongitude" pInputText style="width: 100%"
       type="text" />
+    <span *ngIf="timestampFormGroup.get('vesselPositionLongitude').hasError('maxlength')" class="p-invalid">
+      {{ 'general.timestamp.vesselPosition.longitude.maxLength' | translate }}
+    </span>
+    <span *ngIf="timestampFormGroup.get('vesselPositionLongitude').hasError('pattern')" class="p-invalid">
+      {{ 'general.timestamp.vesselPosition.longitude.pattern' | translate }}
+    </span>
   </div>
   <div class="p-field col-12 md:col-6"></div>
 </div>
@@ -164,18 +181,15 @@
     <p-button (onClick)="close()" class="footer_option__buttons" icon="pi pi-times-circle"
       label="{{'general.close.label' | translate}}" iconPos="left">
     </p-button>
-    <p-button *ngIf="timestampResponseStatus == 'Rejected'"  (onClick)="savePortcallTimestamp()"
-    [disabled]="validatePortOfCallTimestamp()"
-    class="footer_option__buttons"
-      icon="pi pi-save" label="{{'general.save.Rejecteditor.label' | translate}}"
-      iconPos="left">
+    <p-button *ngIf="timestampResponseStatus == 'Rejected'" (onClick)="savePortcallTimestamp()"
+      [disabled]="validatePortOfCallTimestamp()" class="footer_option__buttons" icon="pi pi-save"
+      label="{{'general.save.Rejecteditor.label' | translate}}" iconPos="left">
       <p-progressSpinner *ngIf="creationProgress" [style]="{width: '18px', height: '18px'}" styleClass="custom-spinner"
         strokeWidth="3" animationDuration=".9s"></p-progressSpinner>
     </p-button>
 
-    <p-button *ngIf="timestampResponseStatus == 'Accepted'"  (onClick)="savePortcallTimestamp()"
-    class="footer_option__buttons"
-      icon="pi pi-save" label="{{'general.save.Accepteditor.label' | translate}}"
+    <p-button *ngIf="timestampResponseStatus == 'Accepted'" (onClick)="savePortcallTimestamp()"
+      class="footer_option__buttons" icon="pi pi-save" label="{{'general.save.Accepteditor.label' | translate}}"
       iconPos="left">
       <p-progressSpinner *ngIf="creationProgress" [style]="{width: '18px', height: '18px'}" styleClass="custom-spinner"
         strokeWidth="3" animationDuration=".9s"></p-progressSpinner>
