--- a/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -38,16 +38,15 @@
 
   <div class="p-field col-12 md:col-4">
     <label for="timestampType">{{ 'general.table.header.timestamp.label' | translate }}: </label>
-    <p-dropdown id="timestampType" styleClass="dropdown" [(ngModel)]="timestampTypeSelected" [options]="timestampTypes"
-      [filter]=true filterBy="label" appendTo="body" (onChange)="showLocationNameOption()"
-      [ngModelOptions]="{standalone: true}"></p-dropdown>
+    <p-dropdown id="timestampType" styleClass="dropdown" formControlName="timestampType" [options]="timestampTypes"
+      [filter]=true filterBy="label" appendTo="body" (onChange)="showLocationNameOption()"></p-dropdown>
 
     <div class="p-field col-12 md:col-2"></div>
 
     <div [hidden]="!showTerminalOption()">
       <label for="terminalSelected">{{ 'general.terminal.label' | translate }}: </label>
-      <p-dropdown id="terminalSelected" styleClass="dropdown" [(ngModel)]="terminalSelected" [options]="terminalOptions"
-        [filter]=true filterBy="label,value.facilityName" appendTo="body" [ngModelOptions]="{standalone: true}">
+      <p-dropdown id="terminalSelected" styleClass="dropdown" formControlName="terminal" [options]="terminalOptions"
+        [filter]=true filterBy="label,value.facilityName" appendTo="body">
         <ng-template let-terminal pTemplate="item">
           <div *ngIf="!terminal.value">
             <div>Select Terminal</div>
@@ -69,16 +68,15 @@
 
     <div class="p-fluid p-formgrid grid">
       <div class="p-field col-12 md:col-6">
-        <p-calendar id="eventtimestamp" appendTo="body" [(ngModel)]="eventTimestampDate" hourFormat="24"
+        <p-calendar id="eventtimestamp" appendTo="body" formControlName="eventTimestampDate" hourFormat="24"
           [monthNavigator]="true" [showButtonBar]="false" [showIcon]="true" [showWeek]="true" [yearNavigator]="true"
           yearRange="2010:2030" styleClass="date-time-date-field"
-          placeholder="{{ 'general.timestamp.date.event' | translate }}" [panelStyleClass]="'datetime-panel'"
-          [ngModelOptions]="{standalone: true}"></p-calendar>
+          placeholder="{{ 'general.timestamp.date.event' | translate }}" [panelStyleClass]="'datetime-panel'">
+        </p-calendar>
       </div>
       <div class="p-field col-12 md:col-6">
-        <p-inputMask [(ngModel)]="eventTimestampTime" mask="99:99"
-          placeholder="{{ 'general.timestamp.time' | translate }}" styleClass="datetime-time-time-field"
-          [ngModelOptions]="{standalone: true}"></p-inputMask>
+        <p-inputMask formControlName="eventTimestampTime" mask="99:99"
+          placeholder="{{ 'general.timestamp.time' | translate }}" styleClass="datetime-time-time-field"></p-inputMask>
         <button pTooltip="{{ 'general.currentTime.tooltip' | translate }}" tooltipPosition="top"
           tooltipStyleClass="ToolTipClass" class="minus-rounded-borders" type="button" pButton pRipple
           icon="pi pi-clock" styleClass="p-button-success" (click)="setEventTimestampToNow()"></button>
@@ -89,12 +87,11 @@
   <div class="p-field col-12 md:col-4">
     <div class="p-field berth-location-field" [hidden]="!showLocationNameOption()">
       <label for="locationName">{{ locationNameLabel | translate }}:</label>
-      <input id="locationName" [(ngModel)]="locationName" pInputText style="width: 100%" type="text"
-        [ngModelOptions]="{standalone: true}" />
+      <input id="locationName" formControlName="locationName" pInputText style="width: 100%" type="text" />
     </div>
     <label for="delayCode">{{"general.delaycode.label" | translate}}</label>
-    <p-dropdown appendTo="body" id="delayCode" [options]="delayCodeOptions" [(ngModel)]="delayCode" [filter]="true"
-      filterBy="label,value.name" [group]="false" [ngModelOptions]="{standalone: true}">
+    <p-dropdown appendTo="body" id="delayCode" [options]="delayCodeOptions" formControlName="delayCode" [filter]="true"
+      filterBy="label,value.name" [group]="false">
       <ng-template let-delayCode pTemplate="selectedItem">
         <div *ngIf="delayCode.value" class="delayCodeSelectedWrapper">
           <div class="delayCodeSelected__smdgCode">{{delayCode.value.smdgCode}}</div>
@@ -122,8 +119,7 @@
 
   <div class="p-field col-12 md:col-5">
     <span class="p-float-label">
-      <textarea class="commentBox" id="commentbox" pInputTextarea [(ngModel)]="defaultTimestamp.remark"
-        [ngModelOptions]="{standalone: true}"></textarea>
+      <textarea class="commentBox" id="commentbox" pInputTextarea formControlName="remark"></textarea>
       <label for="commentbox">{{ 'general.comment.tooltip' | translate }}</label>
     </span>
   </div>
