--- a/src/app/view/transport-call-creator/transport-call-creator.component.html
+++ b/src/app/view/transport-call-creator/transport-call-creator.component.html
@@ -179,7 +179,8 @@
         <span
           *ngIf="transportCallFormGroup.get('locationName').hasError('required') && transportCallFormGroup.get('locationName').touched"
           class="p-invalid">
-          {{ 'general.transportCall.validation.carrierServiceCode.empty' | translate }}
+          {{ 'general.transportCall.table.locationName.required' | translate }} 
+          {{ transportCallFormGroup.get('timestampType')?.value.timestampTypeName }} 
         </span>
       </div>
 
